--- a/_posts/2023-08-23-Part1-Chapter1-1-데이터모델링의-이해.md
+++ b/_posts/2023-08-23-Part1-Chapter1-1-데이터모델링의-이해.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Chapter 1-1 데이터 모델링의 이해
+title: Part1 Chapter 1-1 데이터 모델링의 이해
 author: admin
 date: 2023-08-23 03:00:00 +900
 lastmod: 2023-08-25 22:20:00 +900
