--- a/_posts/2023-08-23-엔터티(Entity).md
+++ b/_posts/2023-08-23-엔터티(Entity).md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Part1 Chapter 1-2 엔터티(Entity)
+title: 엔터티(Entity)
 author: admin
 date: 2023-08-24 00:10:00 +900
 lastmod: 2023-08-26 00:40:00 +900
@@ -21,11 +21,11 @@ tags: [sql, sqld, data modeiling]
 
 <br />
 
-# 🌈 2. 엔터티 (Entity)
+# **🌈 엔터티 (Entity)**
 
-## 💻 엔터티란? <br />
+## **💻 엔터티란?** <br />
 
-### 🔍 엔터티 (Entity) <br />
+### **🔍 엔터티 (Entity)** <br />
 
 엔터티의 사전적 의미는 `독립체`이다. <br />
 
@@ -69,7 +69,7 @@ tags: [sql, sqld, data modeiling]
 
 <br/>
 
-### 🔍 엔터티(Entity) 도출
+### **🔍 엔터티(Entity) 도출**
 엔터티는 고객의 비즈니스 프로세스에서 관리되어야 하는 정보를 추출한다. 
 
 예를 통해 알아보자 
@@ -86,11 +86,11 @@ tags: [sql, sqld, data modeiling]
 <br/>
 
 
-## 💻 엔터티의 특징 
+## **💻 엔터티의 특징** 
 
-### 0️⃣ 고객의 관심 사항임 <br />
+### **고객의 관심 사항임** <br />
 
-### 1️⃣ 업무에 쓰이는 정보여야 함 <br />
+### **업무에 쓰이는 정보여야 함** <br />
 
 실질적으로 업무에 쓰이는 정보여야 엔터티로 도출하는 의미가 있다. <br />
 
@@ -100,7 +100,7 @@ tags: [sql, sqld, data modeiling]
 
 쇼핑몰이니 당연히 쿠폰을 발급할 것이라고 예상하고 '쿠폰' 엔터티를 도출해 놓았는데 실제로는 쿠폰을 발급하지 않는다면 이 엔터티는 쓰이지 않을 것이므로 삭제하는 것이 바람직하다. <br />
 
-### 2️⃣ 유니크함을 보장할 수 있는 유일한 식별자가 있어야 함 <br />
+### **유니크함을 보장할 수 있는 유일한 식별자가 있어야 함** <br />
 
 엔터티에 속한 각각의 인스턴스가 중복되거나 식별이 모호하면 이 엔터티는 설계가 잘 못된 것이라 볼 수 있다. <br />
 
@@ -109,18 +109,18 @@ tags: [sql, sqld, data modeiling]
 마찬가지로 상품 엔터티의 경우 상품명이 동일한 상품이 존재할 수 있으므로 별도의 상품 코드를 발번하여 인스턴스를 식별 가능하도록 설계하는 것이 바람직하다. <br />
 
 
-### 3️⃣ 2개 이상의 인스턴스를 가지고 있어야 함  <br />
+### **2개 이상의 인스턴스를 가지고 있어야 함**  <br />
 현재 인스턴스가 1개만 존재하고 앞으로도 쭉 1개만 존재할 예정이라면 이것은 엔터티로 볼 수 없다. <br /> 
 
 예를 들어 쇼핑몰에 '대표' 라는 엔터티가 있다고 가정했을 때 현재 대표가 1명이고 앞으로도 쭉 1명일 예정이라면 이걸 굳이 엔터티로 만들 필요는 없을 것이다. <br />
 
-### 4️⃣ 반드시 속성을 가지고 있어야 함 <br />
+### **반드시 속성을 가지고 있어야 함** <br />
 
 속성이 없는 엔터티는 깡통 휴대폰과 같다. <br />
 
 엔터티는 반드시 자신을 상세하게 나타낼 수 있는 속성을 가지고 있어야 한다. <br />
 
-### 5️⃣ 다른 엔터티와 1개 이상의 관계를 가지고 있어야함 <br />
+### **다른 엔터티와 1개 이상의 관계를 가지고 있어야함**<br />
 
 각각의 엔터티는 다른 엔터티와의 연관성을 가지고 있어야 한다. <br />
 회원 엔터티는 주문 엔터티와 관계를 가지고 있고 주문 엔터티는 상품 엔터티와 관계를 가지고 있다. <br />
@@ -136,7 +136,7 @@ tags: [sql, sqld, data modeiling]
 
 <br />
 
-> ### 릴레이션과 테이블, 인스턴스(instance)
+> ### **릴레이션과 테이블, 인스턴스(instance)**
 > 릴레이션과 테이블은 같은 의미라고 해석하면 된다. <br/>
 > 릴레이션에 `기본키` 및 제약조건을 설정하면 테이블이 된다.<br/>
 > 단, `Relationship`은 릴레이션 간의 `관계`를 의미한다. <br/>
@@ -146,7 +146,7 @@ tags: [sql, sqld, data modeiling]
 
 <br/>
 
-## 💻 엔터티의 분류
+## **💻 엔터티의 분류**
 
 엔터티의 분류는 유형과 무형에 따른 종류, 엔터티가 발생하는 시점에 따른 분류로 나누어진다. <br/>
 
@@ -157,7 +157,7 @@ tags: [sql, sqld, data modeiling]
 
 <br/>
 
-### <span style="color:tomato">유형과 무형</span>에 따른 엔터티 종류 
+### **<span style="color:tomato">유형과 무형</span>에 따른 엔터티 종류** 
 
 |  | | 
 | :--: | :-- |  
@@ -167,7 +167,7 @@ tags: [sql, sqld, data modeiling]
 
 <br/>
 
-### <span style="color:tomato">발생 시점</span>에 따른 엔터티 종류 
+### **<span style="color:tomato">발생 시점</span>에 따른 엔터티 종류**
 
 |  | | 
 | :--: | :-- |  
@@ -177,7 +177,7 @@ tags: [sql, sqld, data modeiling]
 
 <br/>
 
->### 엔터티의 이름을 생성할 때 주의점
+>### **엔터티의 이름을 생성할 때 주의점**
 >- 업무에서 실제로 쓰이는 용어 사용
 >- 한글은 약어로 사용하지 않고 영문은 `대문자`로 표기
 >- `단수 명사`로 표현하고 `띄어쓰기는 하지 않음` 
@@ -196,7 +196,7 @@ tags: [sql, sqld, data modeiling]
 
 <br/>
 
-# 📚 레퍼런스
+# **📚 레퍼런스**
 
 > 정미나. (유튜브 선생님에게 배우는) 유선배 SQL개발자(SQLD) 과외노트 / [정미나 저] (2023). Print.
 {:.prompt-info }
