--- a/_posts/2023-08-23-데이터모델링의-이해.md
+++ b/_posts/2023-08-23-데이터모델링의-이해.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Part1 Chapter 1-1 데이터 모델링의 이해
+title: 데이터 모델링의 이해
 author: admin
 date: 2023-08-23 03:00:00 +900
 lastmod: 2023-08-25 22:20:00 +900
@@ -21,9 +21,9 @@ tags: [sql, sqld, data modeiling]
 
 <br />
 
-# 🌈 **1. 데이터 모델의 이해**
+# 🌈 **데이터 모델의 이해**
 
-## 💻 **1. 모델링이란?**
+## 💻 **모델링이란?**
 
 > **데이터베이스의 모델링은 '현실 세계를 단순화하여 표현하는 기법**<br />
 {:.prompt-tip}
@@ -63,7 +63,7 @@ tags: [sql, sqld, data modeiling]
 
 <br />
 
-## 💻 **2. 모델링의 특징**
+## 💻 **모델링의 특징**
 
 <br />
 
@@ -117,7 +117,7 @@ tags: [sql, sqld, data modeiling]
 <br />
 
 
-## 💻 **3. 모델링의 세 가지 관점**
+## 💻 **모델링의 세 가지 관점**
 
 **1. 데이터 관점 (What, Data)** <br />
 `데이터 위주`의 모델링<br />
@@ -141,7 +141,7 @@ tags: [sql, sqld, data modeiling]
 
 <br/>
 
-## 💻 **4. 모델링의 세 가지 단계**
+## 💻 **모델링의 세 가지 단계**
 
 ### **1. 개념적 데이터 모델링 (Conceptual Data Modeling)**
 
@@ -206,7 +206,7 @@ tags: [sql, sqld, data modeiling]
 
 <br />
 
-## 💻 **5. 데이터의 독립성**
+## 💻 **데이터의 독립성**
 ![데이터의 독립성](https://github.com/leekoby/leekoby.github.io/assets/118284808/e467e2e5-e95c-428e-b139-8424dc6480ef)
 
 ### 🔎 **3층 스키마 (3-Level Schema)**
@@ -261,7 +261,7 @@ DB의 각 사용자나 응용 프로그래머가 접근하는 DB
 <br/>
 
 
-### 🔎 **3단계 스키마 구조가 보장하는 독립성 **
+### 🔎 **3단계 스키마 구조가 보장하는 독립성**
 
 ANSI-SPARC 아키텍처에서 이렇게 스키마를 3단계 구조로 나누는 이유는 데이터베이스에 대한 사용자들의 관점과 데이터베이스가 실제로 표현되는 물리적인 방식을 분리하여 독립성을 보장하기 위한 것
 
@@ -320,7 +320,7 @@ ANSI-SPARC 아키텍처에서 이렇게 스키마를 3단계 구조로 나누는
 
 <br/>
 
-## 💻 **6. 데이터 모델링 고려 사항**
+## 💻 **데이터 모델링 고려 사항**
 
 ### **1️⃣ 데이터 모델의 독립성** 
 독립성이 확보된 모델은 고객의 업무변화에 능동적으로 대응할 수 있다. 
@@ -354,7 +354,7 @@ ANSI-SPARC 아키텍처에서 이렇게 스키마를 3단계 구조로 나누는
 
 <br/>
 
-# 📚 레퍼런스
+# **📚 레퍼런스**
 
 > 정미나. (유튜브 선생님에게 배우는) 유선배 SQL개발자(SQLD) 과외노트 / [정미나 저] (2023). Print.
 {:.prompt-info }
