--- a/_posts/2023-08-23-entity.md
+++ b/_posts/2023-08-23-entity.md
@@ -8,7 +8,7 @@ sitemap:
   changefreq: monthly
   priority: 0.5
 categories: [DATABASE(DB), SQLD]
-tags: [sql, sqld, data modeiling]
+tags: [sql, sqld, entity]
 ---
 
 > 해당 포스트는 `SQLD`를 학습하며 정리한 내용에 대한 포스트입니다.<br />
