--- a/_posts/2023-08-26-rdbms.md
+++ b/_posts/2023-08-26-rdbms.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 관계형 데이터베이스
+title: 관계형 데이터베이스 (RDBMS)
 author: admin
 date: 2023-08-26 03:10:00 +900
 lastmod: 2023-08-26 03:10:00 +900
@@ -8,7 +8,7 @@ sitemap:
   changefreq: monthly
   priority: 0.5
 categories: [DATABASE(DB), SQLD]  # 대문자로 작성
-tags: [sql, sqld, data modeiling] # 소문자로 작성
+tags: [sql, sqld, rdbms ] # 소문자로 작성
 ---
 
 
