--- a/_posts/2023-08-23-entity.md
+++ b/_posts/2023-08-23-entity.md
@@ -187,7 +187,7 @@ tags: [sql, sqld, entity]
 
 <br/>
 
-## 🎯 **기출 내용 추가**
+## 🎯 **추가 내용**
 
 > ### **<span style="color:#ff6600">💡 교차 엔터티(Intersection Entity)</span>**
 >
@@ -198,7 +198,7 @@ tags: [sql, sqld, entity]
 
 <br/>
 
-# **📚 레퍼런스**
+## 📚 **레퍼런스**
 
 > 정미나. (유튜브 선생님에게 배우는) 유선배 SQL개발자(SQLD) 과외노트 / [정미나 저] (2023). Print.
 {:.prompt-info }
