--- a/_posts/2023-08-25-NULL.md
+++ b/_posts/2023-08-25-NULL.md
@@ -26,6 +26,8 @@ tags: [sql, sqld, null] # 소문자로 작성
 
 ## 💻 **NULL**
 
+>**<span style="color:#3366ff">NULL</span>은 <span style="color:#ff6600">아직 알려지지 않은 미지의 값</span>이다.**
+
 >**<span style="color:#3366ff">NULL</span>은 <span style="color:#ff6600">'값이 없음', '미정'의 개념</span>으로 이해할 수 있다.**
 
 - 예를 들어, 친구와 약속장소를 정하지 않았다고 생각해보자. 
@@ -75,7 +77,7 @@ tags: [sql, sqld, null] # 소문자로 작성
 
 <br/>
 
-## 🎯 **기출 내용 추가**
+## 🎯 **추가 내용**
 
 ### ❌
 
@@ -83,7 +85,7 @@ tags: [sql, sqld, null] # 소문자로 작성
 
 <br/>
 
-# 📚 **레퍼런스**
+## 📚 **레퍼런스**
 
 > 정미나. (유튜브 선생님에게 배우는) 유선배 SQL개발자(SQLD) 과외노트 / [정미나 저] (2023). Print.
 {:.prompt-info }
