--- a/_posts/2023-08-29-join.md
+++ b/_posts/2023-08-29-join.md
@@ -227,7 +227,7 @@ MS—SQL에서는 MINUS와 동일한 연산이 EXCEPT이다.
 
 <br/>
 
-## 🎯 **기출 내용 추가**
+## 🎯 **추가 내용**
 
 ### ❌
 
@@ -236,7 +236,7 @@ MS—SQL에서는 MINUS와 동일한 연산이 EXCEPT이다.
 <br/>
 
 
-# 📚 **레퍼런스**
+## 📚 **레퍼런스**
 
 > 정미나. (유튜브 선생님에게 배우는) 유선배 SQL개발자(SQLD) 과외노트 / [정미나 저] (2023). Print.
 {:.prompt-info }
