--- a/_posts/2023-08-29-sub-query.md
+++ b/_posts/2023-08-29-sub-query.md
@@ -163,9 +163,9 @@ IN은 반환되는 여러 개의 행 중에서 하나만 참이 되어도 참이
 
 <br/>
 
-## 🎯 **기출 내용 추가**
+## 🎯 **추가 내용**
 
-> ### **SUB QUERY의이름** 
+> ### **💡 SUB QUERY의이름** 
 > ```sql
 > SELECT (스칼라서브쿼리)
 > FROM (인라인뷰) 
@@ -175,8 +175,14 @@ IN은 반환되는 여러 개의 행 중에서 하나만 참이 되어도 참이
 
 <br/>
 
+> ### **<span style="color:#3366ff">💡 Correlated Sub Query (상호연관서브쿼리)</span>** 
+>
+> **<span style="color:#ff6600">상호연관 서브쿼리는 메인쿼리 값을 서브쿼리가 사용하고 서브쿼리의 값을 받아서 메인 쿼리가 계산되는 쿼리이다.</span>**
+{:.prompt-info}
 
-# 📚 **레퍼런스**
+<br/>
+
+## 📚 **레퍼런스**
 
 > 정미나. (유튜브 선생님에게 배우는) 유선배 SQL개발자(SQLD) 과외노트 / [정미나 저] (2023). Print.
 {:.prompt-info }
