--- a/_posts/2023-08-31-index.md
+++ b/_posts/2023-08-31-index.md
@@ -115,7 +115,7 @@ Index Range SCAN은 인덱스의 Leaf Block의 특정 범위를 스캔한 것이
 
 <br/>
 
-## 🎯 **기출 내용 추가**
+## 🎯 **추가 내용**
 
 >### ❌ **인덱스는 Equal 조건만 사용할 수 있다.** ❌
 >
@@ -125,7 +125,7 @@ Index Range SCAN은 인덱스의 Leaf Block의 특정 범위를 스캔한 것이
 <br/>
 
 
-# 📚 **레퍼런스**
+## 📚 **레퍼런스**
 
 > 정미나. (유튜브 선생님에게 배우는) 유선배 SQL개발자(SQLD) 과외노트 / [정미나 저] (2023). Print.
 {:.prompt-info }
