--- a/_posts/2023-08-27-view.md
+++ b/_posts/2023-08-27-view.md
@@ -81,7 +81,7 @@ tags: [sql, sqld, view] # 소문자로 작성
 
 <br/>
 
-## 🎯 **기출 내용 추가**
+## 🎯 **추가 내용**
 
 ### ❌
 
@@ -89,7 +89,7 @@ tags: [sql, sqld, view] # 소문자로 작성
 
 <br/>
 
-# 📚 **레퍼런스**
+## 📚 **레퍼런스**
 
 > 정미나. (유튜브 선생님에게 배우는) 유선배 SQL개발자(SQLD) 과외노트 / [정미나 저] (2023). Print.
 {:.prompt-info }
