--- a/_posts/2023-04-12-git.md
+++ b/_posts/2023-04-12-git.md
@@ -48,7 +48,7 @@ git checkout main
 
 <br/>
 
-![image](https://github.com/leekoby/leekoby.github.io/assets/118284808/b27b44b6-59c9-48af-9644-ffd636573663)
+![image](https://github.com/leekoby/leekoby.github.io/assets/118284808/b27b44b6-59c9-48af-9644-ffd636573663){: width="500" height="500" }
 
 <br/>
 
