update: 카테고리, 태그 변경

--- a/_posts/2023-09-17-real-my-sql-03.md
+++ b/_posts/2023-09-17-real-my-sql-03.md
@@ -7,8 +7,8 @@ lastmod: 2023-09-17 00:00:00 +900
 sitemap:
   changefreq: monthly
   priority: 0.5
-categories: [MY SQL, REAL MYSQL 1]  # 대문자로 작성
-tags: [database, mysql] # 소문자로 작성
+categories: [DATABASE, REAL MYSQL]  # 대문자로 작성
+tags: [database, mysql, real mysql] # 소문자로 작성
 ---
 
 > 해당 포스트는 `MySQL`를 학습하며 필요한 내용을 정리한 포스트입니다.<br/>
