Update: 카테고리 변경

--- a/_posts/2023-04-07-rest-api.md
+++ b/_posts/2023-04-07-rest-api.md
@@ -7,7 +7,7 @@ lastmod: 2023-04-07 00:00:00 +900
 sitemap:
   changefreq: monthly
   priority: 0.5
-categories: [NETWORK, COMMON]  # 대문자로 작성
+categories: [COMPUTER SCIENCE, NETWORK]  # 대문자로 작성
 tags: [rest api] # 소문자로 작성
 ---
 
