--- a/_posts/2023-08-23-entity.md
+++ b/_posts/2023-08-23-entity.md
@@ -7,7 +7,7 @@ lastmod: 2023-08-26 00:40:00 +900
 sitemap:
   changefreq: monthly
   priority: 0.5
-categories: [CERTIFICATION, SQLD]
+categories: [STUDY, SQLD]
 tags: [sql, sqld, entity]
 ---
 
