--- a/_posts/2023-08-25-NULL.md
+++ b/_posts/2023-08-25-NULL.md
@@ -7,7 +7,7 @@ lastmod: 2023-08-25 21:10:00 +900
 sitemap:
   changefreq: monthly
   priority: 0.5
-categories: [CERTIFICATION, SQLD]  # 대문자로 작성
+categories: [STUDY, SQLD]  # 대문자로 작성
 tags: [sql, sqld, null] # 소문자로 작성
 ---
 
